# Microservices113

./: .gitignore  CMakeLists.txt  README.md
backends/: CMakeLists.txt
backends/network_transport/: CMakeLists.txt  DataRequest.hpp  INetworkTransport.hpp  NetworkTransport.cpp  NetworkTransport.hpp
cmake/configs/: MAIN.cmake  TEST.cmake
cmake/macroses/: ccache.cmake  common_compile.cmake  compiler.cmake  debug.cmake  platform.cmake
frontends/main/: CMakeLists.txt
